# XPBD

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
cmake/: FindIPOPT.cmake  amgcl_enable_examples.patch  code-format.cmake  eigen3_skip_build_demo.patch  include_amgcl.cmake  include_autodiff.cmake  include_backward.cmake  include_blas.cmake  include_boost.cmake  include_cereal.cmake  include_cgal.cmake  include_cli11.cmake  include_cuda.cmake  include_eigen.cmake  include_fast_matrix_market.cmake  include_fmt.cmake  include_geo_sim_sdk.cmake  include_gitnow.cmake  include_ipopt.cmake  include_matplotplusplus.cmake  include_nlopt.cmake  include_openmp.cmake  include_progress_bar.cmake  include_spdlog.cmake  include_spectra.cmake  include_suitesparse.cmake  include_vexcl.cmake  include_vtkio.cmake  spectra_fix_eigen.patch  suitesparse_expose_metis.patch
src/: CMakeLists.txt  XPBD.cpp  XPBD.hpp  solver.cpp  solver.hpp
